feat: support more user fields
