# cmd/api/docs/swagger.json
@@ -181,7 +181,7 @@
         },
         "/douyin/publish/action/": {
             "post": {
-                "description": "发布列表：用户的视频发布列表，直接列出用户所有投稿过的视频",
+                "description": "投稿接口：登录用户选择视频上传",
                 "produces": [
                     "application/json"
                 ],
@@ -590,6 +590,15 @@
         "api.User": {
             "type": "object",
             "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "background_image": {
+                    "type": "string"
+                },
+                "favorite_count": {
+                    "type": "integer"
+                },
                 "follow_count": {
                     "type": "integer"
                 },
@@ -604,6 +613,15 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "signature": {
+                    "type": "string"
+                },
+                "total_favorited": {
+                    "type": "integer"
+                },
+                "work_count": {
+                    "type": "integer"
                 }
             }
         },
